# arc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
arc/: CMakeLists.txt
arc/include/arc/common/: common.hpp  constants.hpp  i2c.hpp  log.hpp  stopwatch.hpp
arc/include/arc/control/: kalman.hpp
arc/include/arc/math/: matrix.hpp
arc/include/arc/sensors/: MPU6050.hpp
arc/src/: main.c  main.cpp
arc/src/control/: kalman.cpp
arc/src/sensors/: MPU6050.cpp
config/: nanorc  tmux.conf
config/mc/: ini  panels.ini
doc/: download_doc.sh
scripts/: bash_init  bash_init.sh  com.sh  flash_swd.sh  flash_usb.sh  pico_build.sh  pico_clean.sh  pico_configure.sh  pico_flash_swd.sh  pico_gdb_server.sh
tools/: CMakeLists.txt  IMU_analysis.ipynb  IMU_calibration.ipynb  accelerometer_analisys.ipynb  serial_print.py
tools/IMU/: CMakeLists.txt  IMU_analysis.ipynb  IMU_calibration.ipynb  calibrate.cpp
tools/imu/: IMU_analysis.ipynb
tools/imu/calibrate/: CMakeLists.txt  calibrate.cpp  calibration.ipynb  scale_acc.cpp  scale_acc.ipynb  scale_gyro.cpp  scale_gyro.ipynb
tools/imu/record/: CMakeLists.txt  record.cpp  recording.ipynb
tools/uart/: README.md  uart_logger.py
